@@ -1,3 +1,7 @@
+2006-01-01 19:29  bchiara
+
+	* ChangeLog, src/diagram.c: correcting a silly mistake
+
 2006-01-01 17:05  bchiara
 
 	* src/: diagram.c, diagram.h: small performance changes and
